src/css/overwrites.css
/* Bootstrap */
:root {
  /* Copying Bootstrap's variable definition to native CSS */
  --spacer: 1rem;
  --form-placeholder-color: #6f7880;
}
.dropdown .dropdown-item {
  cursor: pointer;
}
.transparent {
  opacity: 0;
}

/* Mess */
#mess-messElement {
  position: fixed !important; /* coz the original uses "absolute" for some odd reason */
  white-space: pre;           /* https://stackoverflow.com/a/33052216 */
  z-index: 1500;              /* above Bootstrap, @see https://getbootstrap.com/docs/4.6/layout/overview/#z-index */
}

/* eModal */
/* BIGFIX to support bootstrap v4's flexbox model */
.modal .modal-header > .x.close {
  order: 1;
}

/* vue-multiselect */
.input-group .multiselect {
  width: 1%;
  flex: 1 1 auto;
}
.multiselect__placeholder {
  font-size: 1rem;
  margin-bottom: 0;
  padding-top: 0;
  color: var(--form-placeholder-color);
}
.multiselect__tags, .multiselect__content-wrapper {
  border-color: #ced4da;
}
.multiselect.multiselect--active .multiselect__tags {
  border-color: #80bdff;
  box-shadow: 0 0 0 .2rem rgba(0,123,255,.25);
}
.multiselect__option--group {
  background: inherit !important;
  color: inherit !important;
  font-style: italic;
  font-weight: bolder;
}
.multiselect__option:not(.multiselect__option--group) {
  text-indent: 1rem;
}

/* Bootstrap-switch-button */
input[data-toggle="switchbutton"] ~ .switch-group label {
  position: absolute;
  padding: 0;
}
input[data-toggle="switchbutton"] ~ .switch-group label.switch-on {
  right: 65%;
}
input[data-toggle="switchbutton"] ~ .switch-group label.switch-off {
  left: 60%;
}

